<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">哔呦场馆</string>
    <string name="setting">设置</string>
    <string name="perm_tip">
        当前应用缺少必要权限。\n请点击"设置"-"权限"-打开所需权限。\n最后点击两次后退按钮，即可返回。
    </string>
    <string name="ask_again">请给予应用必要权限，让程序可正常工作。</string>
    <string name="cancel">取消</string>
    <string name="mine">我的</string>
    <string name="register">注册</string>
    <string name="edit_hint1">请输入手机号</string>
    <string name="edit_hint2">请输入密码</string>
    <string name="edit_hint3">记住我</string>
    <string name="edit_hint4">忘记密码</string>
    <string name="edit_hint5">请输入验证码</string>
    <string name="edit_hint6">请输入新密码</string>
    <string name="edit_hint7">请再次确认密码</string>
    <string name="edit_hint8">请输入场馆平台名称</string>
    <string name="edit_hint9">请输入场馆面积</string>
    <string name="edit_hint10">联系电话</string>
    <string name="edit_hint11">联系邮箱</string>
    <string name="edit_hint12">09:00</string>
    <string name="edit_hint13">23:59</string>
    <string name="edit_hint14">限制人数</string>
    <string name="edit_hint15">请输入场馆地址</string>
    <string name="edit_hint16">请输入法人姓名</string>
    <string name="edit_hint17">请输入身份证号</string>
    <string name="edit_hint18">请输入营业执照上的企业名称</string>
    <string name="edit_hint19">请输入营业执照上的企业注册号</string>
    <string name="edit_hint20">以上信息提交后不可更改!</string>
    <string name="edit_hint21">请输入课程名称</string>
    <string name="edit_hint22">请输入限制人数</string>
    <string name="edit_hint23">详细的课程简介能够吸引更多人来锻炼哦～</string>
    <string name="edit_hint24">让用户知道他/她是否适合这项运动，能够减轻你的工作量哦～</string>
    <string name="edit_hint25">锻炼也要保证安全哦～</string>
    <string name="edit_hint26">请提交您的拒绝原因:</string>
    <string name="edit_hint27">姓名</string>
    <string name="edit_hint28">手机号</string>
    <string name="edit_hint29">职位</string>
    <string name="edit_hint30">对现有功能不满意？有新的想法？快点告诉我们吧</string>
    <string name="edit_hint31">请输入旧密码</string>
    <string name="edit_hint32">请输入新密码</string>
    <string name="edit_hint33">请再次确认密码</string>
    <string name="edit_hint34">请输入统一社会信用代码</string>
    <string name="edit_hint35">请输入收到的金额</string>
    <string name="edit_hint36">请输入企业账户号码</string>
    <string name="edit_hint37">请输入用户名</string>
    <string name="edit_hint38">请输入身份证号</string>
    <string name="edit_hint39">请输入银行卡号</string>
    <string name="edit_hint40">请输入手机号</string>
    <string name="edit_hint41">请输入验证码</string>
    <string name="edit_hint42">省</string>
    <string name="edit_hint43">市</string>
    <string name="edit_hint44">区</string>
    <string name="edit_hint45">详细地址</string>
    <string name="edit_hint46">如：光大银行通化分行</string>
    <string name="edit_hint47">房间名称</string>
    <string name="edit_hint48">容纳人数</string>
    <string name="tv1">登录</string>
    <string name="tv2">注册即代表您同意哔哟</string>
    <string name="tv3">《用户隐私政策》</string>
    <string name="tv4">确定</string>
    <string name="tv5">忘记密码</string>
    <string name="tv6">发送验证码</string>
    <string name="tv7">角色选择</string>
    <string name="tv8">馆主</string>
    <string name="tv9">员工</string>
    <string name="tv10">馆主资质</string>
    <string name="tv11">为了更好的获取客户，及验证您的真实身份</string>
    <string name="tv12">和核实场馆资质，需要您配合提交相关信</string>
    <string name="tv13">息，我们会在24小时内为您审核</string>
    <string name="tv14">提交审核资料</string>
    <string name="tv15">员工资质</string>
    <string name="tv16">您暂无权限！</string>
    <string name="tv17">请联系您所在场馆并及时为您开通权限。</string>
    <string name="tv18">基础资料</string>
    <string name="tv19">名称</string>
    <string name="tv20">场馆类型</string>
    <string name="tv21">场馆面积</string>
    <string name="tv22">联系电话</string>
    <string name="tv23">邮箱</string>
    <string name="tv24">营业时间</string>
    <string name="tv25">人</string>
    <string name="tv26">最多选择三项</string>
    <string name="tv27">场馆地址</string>
    <string name="tv28">功能性场所</string>
    <string name="tv29">场馆logo</string>
    <string name="tv30">场馆照片</string>
    <string name="tv31">0/9</string>
    <string name="tv32">建议上传卫生间、更衣室、器械区、操房等位置的照片。</string>
    <string name="tv33">场馆设施</string>
    <string name="tv34">下一步</string>
    <string name="tv35">法人姓名</string>
    <string name="tv36">身份证号</string>
    <string name="tv37">企业名称</string>
    <string name="tv38">企业注册号</string>
    <string name="tv39">提交</string>
    <string name="tv40">提交成功</string>
    <string name="tv41">我们会在24小时内为您审核，请您耐心等待</string>
    <string name="tv42">月</string>
    <string name="tv43">7/15</string>
    <string name="tv44">用户端二维码</string>
    <string name="tv45">将二维码放入框内，即可自动扫描</string>
    <string name="tv46">有氧操房</string>
    <string name="tv47">瑜伽</string>
    <string name="tv48">单车房</string>
    <string name="tv49">9:00</string>
    <string name="tv50">提交审核</string>
    <string name="tv51">审核失败!</string>
    <string name="tv52">很抱歉，您提供的信息未能通过审核，请重新提交。</string>
    <string name="tv53">重新提交</string>
    <string name="tv54">课程名称:</string>
    <string name="tv55">团操老师:</string>
    <string name="tv56">课程房间:</string>
    <string name="tv57">课程价格:</string>
    <string name="tv58">人数限制:</string>
    <string name="tv59">课程时间:</string>
    <string name="tv60">课程介绍:</string>
    <string name="tv61">注意事项:</string>
    <string name="tv62">添加课程</string>
    <string name="tv63">新增课程</string>
    <string name="tv64">团课详情</string>
    <string name="tv65">新增团课申请</string>
    <string name="tv66">团课名称</string>
    <string name="tv67">团课类型</string>
    <string name="tv68">训练目标</string>
    <string name="tv69">训练难度</string>
    <string name="tv70">团课房间</string>
    <string name="tv71">可容纳人数</string>
    <string name="tv72">团课时间</string>
    <string name="tv73">团课循环</string>
    <string name="tv74">课程简介</string>
    <string name="tv75">适合人群</string>
    <string name="tv76">注意事项</string>
    <string name="tv77">邀请团课老师</string>
    <string name="tv78">团课老师详情</string>
    <string name="tv79">已贴标签</string>
    <string name="tv80">邀请</string>
    <string name="tv81">课程价格</string>
    <string name="tv82">最多只能邀请5个教练！</string>
    <string name="tv83">私人教练 | 已服务时长：</string>
    <string name="tv84">已贴标签</string>
    <string name="tv85">消息</string>
    <string name="tv86">账户消息</string>
    <string name="tv87">系统消息</string>
    <string name="tv88">用户消息</string>
    <string name="tv89">场地申请</string>
    <string name="tv90">拒绝</string>
    <string name="tv91">同意</string>
    <string name="tv92">已同意</string>
    <string name="tv93">已拒绝</string>
    <string name="tv94">提交成功！</string>
    <string name="tv95">拒绝原因</string>
    <string name="tv96">课程申请详情</string>
    <string name="tv97">我的场馆</string>
    <string name="tv98">账单余额</string>
    <string name="tv99">权限管理</string>
    <string name="tv100">高低时峰</string>
    <string name="tv101">账号安全</string>
    <string name="tv102">产品反馈</string>
    <string name="tv103">关于</string>
    <string name="tv104">权限管理</string>
    <string name="tv105">角色管理</string>
    <string name="tv106">教练绑定</string>
    <string name="tv107">关于我们</string>
    <string name="tv108">产品反馈</string>
    <string name="tv109">选择问题类型(必填)</string>
    <string name="tv110">产品建议 (功能建议/新的想法)</string>
    <string name="tv111">故障反馈 (功能不可用)</string>
    <string name="tv112">其他问题</string>
    <string name="tv113">请输入问题描述 (必填，10个字以上)</string>
    <string name="tv114">账号安全</string>
    <string name="tv115">手机号</string>
    <string name="tv116">修改密码</string>
    <string name="tv117">退出登录</string>
    <string name="tv118">修改密码</string>
    <string name="tv119">场馆名称</string>
    <string name="tv120">场馆类型</string>
    <string name="tv121">基础信息</string>
    <string name="tv122">营业设施</string>
    <string name="tv123">完成</string>
    <string name="tv124">高低时峰</string>
    <string name="tv125">低峰时间段</string>
    <string name="tv126">高峰时间段</string>
    <string name="tv127">开启会员</string>
    <string name="tv128">尊敬的 一二三场馆</string>
    <string name="tv129">购买会员，您将享受哔哟为您提供的以下服务：</string>
    <string name="tv130">试用7天</string>
    <string name="tv131">购买会员</string>
    <string name="tv132">资质审核</string>
    <string name="tv133">企业名称</string>
    <string name="tv134">验证金额</string>
    <string name="tv135">企业银行账号</string>
    <string name="tv136">设置转出账户</string>
    <string name="tv137">企业名称</string>
    <string name="tv138">用户名</string>
    <string name="tv139">身份证号</string>
    <string name="tv140">银行卡号</string>
    <string name="tv141">手机号</string>
    <string name="tv142">验证码</string>
    <string name="tv143">提交审核</string>
    <string name="tv144">开通会员</string>
    <string name="tv145">开启会员</string>
    <string name="tv146">哔哟终身会员</string>
    <string name="tv147">日程</string>
    <string name="tv148">拨打</string>
    <string name="tv149">开户银行</string>
    <string name="tv150">场馆名称</string>
    <string name="tv151">场馆名称</string>
    <string name="tv152">身份证格式不正确</string>
    <string name="tv153">请选择需要管理的场馆</string>
    <string name="tv154">确认切换</string>
    <string name="tv155">确定切换至该场馆吗？</string>
    <string name="tv156">检测到有更新，请立即升级至最新版本。</string>
    <string name="tv160"> 新版本正在努力的更新中，请稍等</string>
    <string name="tv161">场馆房间</string>
    <string name="tv162">剪裁</string>
    <string name="tv163">全部状态</string>
    <string name="tv164">全部类型</string>
    <string name="tv165">教练：</string>
    <string name="tv166">课程时长</string>
    <string name="tv167">选择</string>
    <string name="tv168">（最低限价¥40）</string>
    <string name="tv169">房间类型</string>
    <string name="tv170">房间名称</string>
    <string name="tv171">详细的课程简介能够吸引更多人来锻炼哦～</string>
    <string name="tv172">封面图</string>
    <string name="tv173">授课图</string>
    <string name="tv174" tools:ignore="ExtraTranslation">教练</string>
    <string name="tv175">去邀请</string>
    <string name="tv176">退出创建</string>
    <string name="tv177">确定退出创建团课吗？信息将不会保留</string>
    <string name="tv178">选择教练</string>
    <string name="tv179">您还未选择教练，课程信息将会保存在邀请状态中</string>
    <string name="tv180">合作信息</string>
    <string name="tv181">用户协议及隐私政策</string>
    <string name="tv182">场馆合作协议</string>
    <string name="tv183">版本升级</string>
    <string name="tv184">当前是最新版本~</string>
    <string name="tv185">图片上传失败~</string>
    <string name="tv186">用户协议及免责申明</string>
    <string name="tv187">成本核算</string>
    <string name="tv188">场馆价格</string>
    <string name="tv_select">请选择</string>
    <string name="tv_qianbao">账户</string>
    <string name="tv_money_details">收支明细</string>
    <string name="tv_tixian">转出</string>
    <string name="tv_tixian_money">转出金额</string>
    <string name="alert_dialog_tishi1">温馨提示</string>
    <string name="alert_dialog_tishi2">解绑银行卡</string>
    <string name="alert_dialog_cached_cancel">取消</string>
    <string name="alert_dialog_cached_ok">确认</string>
    <string name="alert_dialog_tishi3">场馆名称不能为空！</string>
    <string name="alert_dialog_tishi4">面积不能为空！</string>
    <string name="alert_dialog_tishi5">电话不能为空！</string>
    <string name="alert_dialog_tishi6">邮箱不能为空！</string>
    <string name="alert_dialog_tishi7">地址不能为空！</string>
    <string name="alert_dialog_tishi8">LOGO不能为空！</string>
    <string name="alert_dialog_tishi9">照片不能为空！</string>
    <string name="alert_dialog_tishi10">标签不能为空！</string>
    <string name="alert_dialog_tishi11">功能性场所不能为空！</string>
    <string name="alert_dialog_tishi12">企业名称不能为空！</string>
    <string name="alert_dialog_tishi13">统一社会信用代码不能为空！</string>
    <string name="alert_dialog_tishi14">法人信息不能为空！</string>
    <string name="alert_dialog_tishi15">身份证号不能为空！</string>
    <string name="alert_dialog_tishi16">团课名称不能为空！</string>
    <string name="alert_dialog_tishi17">团课人数不能为空！</string>
    <string name="alert_dialog_tishi18">课程介绍不能为空！</string>
    <string name="alert_dialog_tishi19">适合人群不能为空！</string>
    <string name="tv_cg_base_info">基础信息</string>
    <string name="tv_venue_facilities">场馆设施</string>
    <string name="tv_album_manager">相册管理</string>
    <string name="tv_coach_notes">教练须知</string>
    <string name="tv_account_info">账户信息</string>
    <string name="tv_business_info">营业信息</string>
</resources>