<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.mine.cg.VenueDetailActivity">

    <RadioGroup
        android:id="@+id/rec_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/color_F9CE0F"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/rec_right"
        app:layout_constraintTop_toTopOf="parent" >
        <RadioButton
            android:id="@+id/rb_base_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m45"
            android:background="@drawable/radio_cg_btn"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:checked="true"
            android:textColor="@color/contents_text"
            android:text="@string/tv_cg_base_info"/>
        <RadioButton
            android:id="@+id/rb_venue_facilities"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m45"
            android:background="@drawable/radio_cg_btn"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/contents_text"
            android:text="@string/tv_venue_facilities"/>
        <RadioButton
            android:id="@+id/rb_business_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m45"
            android:background="@drawable/radio_cg_btn"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/contents_text"
            android:text="@string/tv_business_info"/>
        <RadioButton
            android:id="@+id/rb_account_info"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m45"
            android:background="@drawable/radio_cg_btn"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/contents_text"
            android:text="@string/tv_account_info"/>
        <RadioButton
            android:id="@+id/rb_album_manager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m45"
            android:background="@drawable/radio_cg_btn"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/contents_text"
            android:text="@string/tv_album_manager"/>
        <RadioButton
            android:id="@+id/rb_coach_notes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m45"
            android:background="@drawable/radio_cg_btn"
            android:button="@null"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/contents_text"
            android:text="@string/tv_coach_notes"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintLeft_toRightOf="@+id/rec_left"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>